added data_copy inside the function

--- a/kmeans++.ipynb
+++ b/kmeans++.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -33,21 +33,22 @@
    "source": [
     "\n",
     "def kmeansplusplus(data, k, d):\n",
-    "    index=int(np.random.choice(data.shape[0],1))\n",
-    "    centroid=data[index]\n",
-    "    data=np.delete(data,index,axis=0)\n",
+    "    data_copy=data.copy()\n",
+    "    index=int(np.random.choice(data_copy.shape[0],1))\n",
+    "    centroid=data_copy[index]\n",
+    "    data_copy=np.delete(data_copy,index,axis=0)\n",
     "    for number in range(k-1):\n",
-    "        distance=point_sq(data,centroid)\n",
+    "        distance=point_sq(data_copy,centroid)\n",
     "        prob=dist_prob(distance).tolist()\n",
-    "        index=int(np.random.choice(data.shape[0],1,prob))\n",
-    "        centroid=np.vstack([centroid,data[index]])\n",
-    "        data=np.delete(data,index,axis=0)\n",
+    "        index=int(np.random.choice(data_copy.shape[0],1,prob))\n",
+    "        centroid=np.vstack([centroid,data_copy[index]])\n",
+    "        data_copy=np.delete(data_copy,index,axis=0)\n",
     "    return centroid\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -77,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -95,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -117,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -139,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -151,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -159,22 +160,22 @@
     {
      "data": {
       "text/plain": [
-       "(array([[ 0.52599068,  0.85293805],\n",
-       "        [ 0.82916905,  0.28287858],\n",
-       "        [ 0.12686308,  0.15170192],\n",
-       "        [ 0.20556819,  0.43478877],\n",
-       "        [ 0.51194171,  0.16988328],\n",
-       "        [ 0.86938193,  0.72004789],\n",
-       "        [ 0.19056038,  0.78325858],\n",
-       "        [ 0.55604042,  0.5872002 ]]),\n",
-       " array([2, 4, 6, 2, 0, 4, 3, 3, 7, 5, 5, 4, 3, 5, 6, 0, 3, 3, 7, 6, 2, 6, 6,\n",
-       "        5, 0, 6, 6, 5, 7, 7, 7, 6, 4, 1, 3, 5, 3, 0, 1, 3, 1, 3, 4, 1, 2, 2,\n",
-       "        0, 1, 5, 0, 3, 3, 7, 0, 1, 5, 4, 0, 4, 3, 7, 5, 5, 0, 5, 0, 0, 5, 6,\n",
-       "        5, 4, 1, 7, 6, 1, 5, 1, 7, 5, 0, 1, 0, 4, 3, 2, 7, 4, 4, 4, 2, 3, 6,\n",
-       "        0, 4, 1, 1, 5, 3, 3, 6]))"
+       "(array([[ 0.18983469,  0.86310658],\n",
+       "        [ 0.59613199,  0.85576268],\n",
+       "        [ 0.90340848,  0.87043943],\n",
+       "        [ 0.60707347,  0.24596254],\n",
+       "        [ 0.16750803,  0.16475219],\n",
+       "        [ 0.8933827 ,  0.55949548],\n",
+       "        [ 0.35968378,  0.61060473],\n",
+       "        [ 0.89017371,  0.11702261]]),\n",
+       " array([5, 1, 6, 7, 4, 5, 3, 5, 3, 4, 0, 6, 0, 4, 5, 5, 6, 0, 5, 6, 1, 6, 7,\n",
+       "        3, 3, 6, 4, 4, 6, 6, 1, 1, 0, 6, 0, 1, 0, 3, 1, 6, 6, 2, 6, 6, 3, 3,\n",
+       "        4, 5, 0, 0, 3, 3, 0, 2, 3, 5, 4, 4, 7, 6, 2, 7, 4, 7, 6, 3, 2, 6, 7,\n",
+       "        1, 6, 6, 7, 3, 6, 1, 1, 0, 4, 7, 0, 2, 0, 1, 1, 2, 5, 7, 4, 3, 6, 6,\n",
+       "        7, 0, 6, 4, 6, 0, 4, 1]))"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
