partially done and a cleaned version

--- a/kmeans-parallel.ipynb
+++ b/kmeans-parallel.ipynb
@@ -11,11 +11,11 @@
     "#distance square\n",
     "def dist_sq(a, b):\n",
     "    return np.sum((a-b)**2)\n",
-    "#minimum distance square for every point to the closest centroid\n",
+    "#minimum distance square for every point to the centroid\n",
     "def point_sq(data,centroid):\n",
     "    dist=[]\n",
     "    for i in range(data.shape[0]):\n",
-    "        dist.append(min(dist_sq(data.ix[i],c) for c in centroid))\n",
+    "        dist.append(min(dist_sq(data[i],c) for c in centroid))\n",
     "    return dist\n",
     "        \n",
     "#calculate probability\n",
@@ -33,23 +33,29 @@
    "source": [
     "import math\n",
     "def kmeansparallel(data, k, l, d):\n",
-    "    #step 1\n",
+    "    #step 1: sample a point uniformly at random from X\n",
     "    index=int(np.random.choice(data.shape[0],1))\n",
-    "    centroid=np.array(data.ix[index])\n",
+    "    centroid=np.array(data[index])\n",
     "    data_copy=data.copy()\n",
-    "    data=data.drop(data.index[index])\n",
-    "    #step 2\n",
-    "    cost=np.sum(point_sq(data,centroid))\n",
+    "    data_copy=np.delete(data_copy,index,axis=0)\n",
+    "    #step 2: calculate the cost and number of iterations(log(cost))\n",
+    "    cost=np.sum(point_sq(data_copy,centroid))\n",
     "    iteration=math.ceil(np.log(cost))\n",
     "    #step 3\n",
     "    for number in range(iteration):\n",
-    "        distance=point_sq(data,centroid)\n",
+    "        #calculate phi_X(C)\n",
+    "        distance=point_sq(data_copy,centroid)\n",
+    "        #calculate the probability\n",
     "        prob=dist_prob(distance,l).tolist()\n",
-    "        for n in range(data.shape[0]):\n",
+    "        for n in range(data_copy.shape[0]):\n",
+    "            #if the probability is greater than the random uniform\n",
     "            if prob[n]>np.random.uniform():\n",
-    "                centroid=np.vstack([centroid,np.array(data.ix[n])])\n",
-    "                data=data.drop(data.index[n])\n",
-    "    #step 4\n",
+    "                #add the point to C\n",
+    "                centroid=np.vstack([centroid,np.array(data_copy[n])])\n",
+    "                #delete that point from the copy\n",
+    "                data_copy=np.delete(data_copy,index,axis=0)\n",
+    "    #step 4:\n",
+    "    \n",
     "    \n",
     "    return centroid\n",
     "\n",
@@ -58,227 +64,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "#test \n",
-    "data=DataFrame([np.random.random(100),np.random.random(100)]).transpose()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3.5088077499351416"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.log(sum(point_sq(data,data.ix[index])))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "index=int(index)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>96</th>\n",
-       "      <td>0.587071</td>\n",
-       "      <td>0.929157</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           0         1\n",
-       "96  0.587071  0.929157"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data.ix[index]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.074629747911135"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dist_sq(data.ix[9],data.ix[index])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'list' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-13-f7b145f4b878>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mdistance\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mpoint_sq\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mcost_x\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcost\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mprob\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdist_prob\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdistance\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mcost_x\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdistance\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'list' object is not callable"
-     ]
-    }
-   ],
-   "source": [
-    "distance=point_sq(data,index)\n",
-    "cost_x=cost(index,data)\n",
-    "prob=dist_prob(distance,cost_x).tolist()\n",
-    "print(distance)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.0547681930010349"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dist_sq(data.ix[5],data.ix[index])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1.2079846567234174, 0.17552932147891576]"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[(dist_sq(data.ix[index], point, axis=0)) for point in data]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'roundup' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-63-6639cb0dbb19>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mroundup\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3.2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'roundup' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "roundup(3.2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.19817746319234708"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.random.uniform()"
+    "data=np.array(DataFrame([np.random.random(100),np.random.random(100)]).transpose())\n"
    ]
   },
   {
