finished kmeans-parallel

--- a/kmeans-parallel.ipynb
+++ b/kmeans-parallel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -38,9 +38,11 @@
     "    centroid=np.array(data[index])\n",
     "    data_copy=data.copy()\n",
     "    data_copy=np.delete(data_copy,index,axis=0)\n",
+    "    \n",
     "    #step 2: calculate the cost and number of iterations(log(cost))\n",
     "    cost=np.sum(point_sq(data_copy,centroid))\n",
     "    iteration=math.ceil(np.log(cost))\n",
+    "    \n",
     "    #step 3\n",
     "    for number in range(iteration):\n",
     "        #calculate phi_X(C)\n",
@@ -54,24 +56,198 @@
     "                centroid=np.vstack([centroid,np.array(data_copy[n])])\n",
     "                #delete that point from the copy\n",
     "                data_copy=np.delete(data_copy,index,axis=0)\n",
-    "    #step 4:\n",
     "    \n",
+    "    #step 4: assign the weights\n",
+    "    weight_size=centroid.shape[0]\n",
+    "    weight=np.zeros(weight_size)\n",
+    "    for i in range(data_copy.shape[0]):\n",
+    "        index_w=np.argmin(list(dist_sq(data_copy[i],c) for c in centroid))\n",
+    "        weight[index_w]=weight[index_w]+1\n",
     "    \n",
-    "    return centroid\n",
+    "    #step 5: recluster the weighted points in C into k clusters\n",
+    "    #reinitialize k centroids\n",
+    "    new_centroids=np.zeros([k,d])\n",
+    "    for cluster in range(k):\n",
+    "        #according to the weights from step 4, caculate the probability that a point is sampled from C\n",
+    "        prob_w=list(weight/sum(weight))\n",
+    "        #sample a new centroid\n",
+    "        new_index=np.random.choice(centroid.shape[0],1,prob_w)\n",
+    "        #store the new centroid\n",
+    "        new_centroids[cluster]=centroid[new_index]\n",
+    "        #delete the new centroid from the centroid\n",
+    "        centroid=np.delete(centroid,new_index,axis=0)\n",
+    "        #delete the correponding weight\n",
+    "        weight=np.delete(weight,new_index,axis=0)\n",
+    "    return new_centroids\n",
     "\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#with the initialization of the centroids from the function kmeansplusplus\n",
+    "#plug in the original data(dataSet), initializtions(initial) and the dimension of the data(d)\n",
+    "def kmeans(dataSet, initial, d):\n",
+    "    centroids=initial\n",
+    "    k=centroids.shape[0]\n",
+    "    # Initialize book keeping vars.\n",
+    "    iterations = 0\n",
+    "    oldCentroids = np.zeros(initial.shape)\n",
+    "    \n",
+    "    # Run the main k-means algorithm\n",
+    "    while not shouldStop(oldCentroids, centroids, iterations):\n",
+    "        # Save old centroids for convergence test. Book keeping.\n",
+    "        oldCentroids = centroids\n",
+    "        iterations += 1\n",
+    "        \n",
+    "        # Assign labels to each datapoint based on centroids\n",
+    "        l= getLabels(dataSet, centroids)\n",
+    "        \n",
+    "        # Assign centroids based on datapoint labels\n",
+    "        centroids = getCentroids(dataSet, l, k, d)\n",
+    "        \n",
+    "    # We can get the labels too by calling getLabels(dataSet, centroids)\n",
+    "    return centroids, np.array(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Function: Should Stop\n",
+    "# -------------\n",
+    "# Returns True or False if k-means is done. K-means terminates either\n",
+    "# because it has run a maximum number of iterations OR the centroids\n",
+    "# stop changing.\n",
+    "def shouldStop(oldCentroids, centroids, iterations):\n",
+    "    if iterations > 50: return True\n",
+    "    return oldCentroids.all == centroids.all\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Function: Get Labels\n",
+    "# -------------\n",
+    "# Returns a label for each piece of data in the dataset. \n",
+    "def getLabels(dataSet, centroids):\n",
+    "    # For each element in the dataset, chose the closest centroid. \n",
+    "    # Make that centroid the element's label.\n",
+    "    l=[]\n",
+    "    for i in range(data.shape[0]):\n",
+    "        #arg min as the label\n",
+    "        l.append(np.argmin(list(dist_sq(data[i],c) for c in centroids)))\n",
+    "    return l\n",
+    "\n",
+    "            \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Function: Get Centroids\n",
+    "# -------------\n",
+    "# Returns k random centroids, each of dimension n.\n",
+    "def getCentroids(dataSet, labels, k, d):\n",
+    "    # Each centroid is the arithmetic mean of the points that\n",
+    "    # have that centroid's label. Important: If a centroid is empty (no points have\n",
+    "    # that centroid's label) you should randomly re-initialize it.\n",
+    "    data_new = DataFrame(dataSet.copy())\n",
+    "    data_new['Labels'] = labels\n",
+    "    data_new = np.array(data_new.groupby(['Labels']).mean().iloc[:,:2])\n",
+    "    # if a centroid is empty, reinitialize it \n",
+    "    if len(np.unique(labels))<k:\n",
+    "        diff=k-len(np.unique(labels))\n",
+    "        data_new=np.vstack([data_new,np.random.random([diff,d])])    \n",
+    "    return data_new\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
    },
    "outputs": [],
    "source": [
     "#test \n",
-    "data=np.array(DataFrame([np.random.random(100),np.random.random(100)]).transpose())\n"
+    "data=np.array(DataFrame([np.random.random(10000),np.random.random(10000)]).transpose())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.16549973,  0.49599153],\n",
+       "       [ 0.51697025,  0.41550265],\n",
+       "       [ 0.68059705,  0.11475604],\n",
+       "       [ 0.36227631,  0.93414034],\n",
+       "       [ 0.0550219 ,  0.0434049 ],\n",
+       "       [ 0.15008531,  0.79005255]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "initial=kmeansparallel(data, 6, 8, 2)\n",
+    "initial"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[ 0.30138293,  0.49917095],\n",
+       "        [ 0.79928891,  0.50518577],\n",
+       "        [ 0.73631659,  0.16622416],\n",
+       "        [ 0.72626904,  0.83073888],\n",
+       "        [ 0.22881109,  0.17954849],\n",
+       "        [ 0.22563103,  0.82564948]]), array([1, 0, 2, ..., 2, 4, 1]))"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kmeans(data,initial,2)"
    ]
   },
   {
