finished kmeans-parallel code

--- a/kmeans-parallel.ipynb
+++ b/kmeans-parallel.ipynb
@@ -68,7 +68,7 @@
     "    #reinitialize k centroids\n",
     "    new_centroids=np.zeros([k,d])\n",
     "    for cluster in range(k):\n",
-    "        #according to the weights from step 4, caculate the probability that a point is sampled from C\n",
+    "        #according to the weights from step 4, calculate the probability that a point is sampled from C\n",
     "        prob_w=list(weight/sum(weight))\n",
     "        #sample a new centroid\n",
     "        new_index=np.random.choice(centroid.shape[0],1,prob_w)\n",
@@ -91,7 +91,7 @@
    },
    "outputs": [],
    "source": [
-    "#with the initialization of the centroids from the function kmeansplusplus\n",
+    "#with the initialization of the centroids from the function kmeansparallel\n",
     "#plug in the original data(dataSet), initializtions(initial) and the dimension of the data(d)\n",
     "def kmeans(dataSet, initial, d):\n",
     "    centroids=initial\n",
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -205,15 +205,15 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 0.16549973,  0.49599153],\n",
-       "       [ 0.51697025,  0.41550265],\n",
-       "       [ 0.68059705,  0.11475604],\n",
-       "       [ 0.36227631,  0.93414034],\n",
-       "       [ 0.0550219 ,  0.0434049 ],\n",
-       "       [ 0.15008531,  0.79005255]])"
+       "array([[ 0.48508338,  0.27528881],\n",
+       "       [ 0.42037508,  0.69372252],\n",
+       "       [ 0.97007772,  0.50123077],\n",
+       "       [ 0.07155155,  0.64513388],\n",
+       "       [ 0.58442523,  0.54404473],\n",
+       "       [ 0.66033139,  0.04235092]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -233,15 +233,15 @@
     {
      "data": {
       "text/plain": [
-       "(array([[ 0.30138293,  0.49917095],\n",
-       "        [ 0.79928891,  0.50518577],\n",
-       "        [ 0.73631659,  0.16622416],\n",
-       "        [ 0.72626904,  0.83073888],\n",
-       "        [ 0.22881109,  0.17954849],\n",
-       "        [ 0.22563103,  0.82564948]]), array([1, 0, 2, ..., 2, 4, 1]))"
+       "(array([[ 0.22001227,  0.18971911],\n",
+       "        [ 0.49544877,  0.84825679],\n",
+       "        [ 0.84327346,  0.72062453],\n",
+       "        [ 0.14846873,  0.7312323 ],\n",
+       "        [ 0.47611926,  0.46393542],\n",
+       "        [ 0.77800061,  0.20070341]]), array([0, 5, 1, ..., 5, 1, 1]))"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
