tested the two: plusplus sucks and parallel is awesome

--- a/kmeans++.ipynb
+++ b/kmeans++.ipynb
@@ -157,19 +157,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "#test \n",
-    "data=np.array(DataFrame([np.random.random(100),np.random.random(100)]).transpose())\n"
+    "data=np.array(DataFrame([np.random.random(10000),np.random.random(10000)]).transpose())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 3 µs, sys: 0 ns, total: 3 µs\n",
+      "Wall time: 6.91 µs\n"
+     ]
+    }
+   ],
+   "source": [
+    "%time\n",
+    "initial= kmeansplusplus(data,8,2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -177,28 +198,22 @@
     {
      "data": {
       "text/plain": [
-       "(array([[ 0.71918083,  0.86783032],\n",
-       "        [ 0.2309956 ,  0.41364373],\n",
-       "        [ 0.39628784,  0.87422448],\n",
-       "        [ 0.88068577,  0.45512549],\n",
-       "        [ 0.10535794,  0.11895624],\n",
-       "        [ 0.67916171,  0.18225129],\n",
-       "        [ 0.54517364,  0.59593828],\n",
-       "        [ 0.10850523,  0.81978801]]),\n",
-       " array([6, 6, 4, 4, 1, 2, 6, 2, 1, 2, 7, 1, 1, 0, 5, 5, 7, 7, 6, 6, 2, 0, 1,\n",
-       "        3, 7, 3, 5, 0, 6, 5, 0, 5, 2, 5, 0, 1, 2, 6, 5, 4, 3, 1, 1, 2, 3, 2,\n",
-       "        5, 2, 1, 1, 1, 7, 7, 5, 7, 5, 6, 5, 6, 4, 0, 1, 2, 0, 1, 4, 3, 6, 2,\n",
-       "        1, 6, 6, 5, 7, 7, 1, 5, 4, 0, 1, 2, 0, 3, 5, 7, 7, 6, 1, 4, 6, 5, 3,\n",
-       "        4, 0, 2, 5, 4, 1, 7, 3]))"
+       "(array([[ 0.83668149,  0.16794067],\n",
+       "        [ 0.50013326,  0.79354143],\n",
+       "        [ 0.22604191,  0.49593718],\n",
+       "        [ 0.83404393,  0.84052523],\n",
+       "        [ 0.16021621,  0.83096164],\n",
+       "        [ 0.17186286,  0.16423684],\n",
+       "        [ 0.50188918,  0.23066165],\n",
+       "        [ 0.77986719,  0.50538817]]), array([1, 5, 6, ..., 4, 3, 5]))"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "initial= kmeansplusplus(data,8,2)\n",
     "kmeans(data, initial,2)"
    ]
   },
