--- a/kmeans-parallel.ipynb
+++ b/kmeans-parallel.ipynb
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -197,35 +197,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[ 0.48508338,  0.27528881],\n",
-       "       [ 0.42037508,  0.69372252],\n",
-       "       [ 0.97007772,  0.50123077],\n",
-       "       [ 0.07155155,  0.64513388],\n",
-       "       [ 0.58442523,  0.54404473],\n",
-       "       [ 0.66033139,  0.04235092]])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 3 µs, sys: 1e+03 ns, total: 4 µs\n",
+      "Wall time: 9.06 µs\n"
+     ]
     }
    ],
    "source": [
-    "initial=kmeansparallel(data, 6, 8, 2)\n",
-    "initial"
+    "%time\n",
+    "initial=kmeansparallel(data, 8, 8, 2)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -233,15 +226,17 @@
     {
      "data": {
       "text/plain": [
-       "(array([[ 0.22001227,  0.18971911],\n",
-       "        [ 0.49544877,  0.84825679],\n",
-       "        [ 0.84327346,  0.72062453],\n",
-       "        [ 0.14846873,  0.7312323 ],\n",
-       "        [ 0.47611926,  0.46393542],\n",
-       "        [ 0.77800061,  0.20070341]]), array([0, 5, 1, ..., 5, 1, 1]))"
+       "(array([[ 0.1667522 ,  0.51939996],\n",
+       "        [ 0.78119066,  0.85468391],\n",
+       "        [ 0.23783959,  0.85671761],\n",
+       "        [ 0.5009388 ,  0.20827411],\n",
+       "        [ 0.16411334,  0.16764617],\n",
+       "        [ 0.5036955 ,  0.6142908 ],\n",
+       "        [ 0.83596594,  0.50733647],\n",
+       "        [ 0.832612  ,  0.16065111]]), array([5, 7, 7, ..., 6, 3, 0]))"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
