--- a/kmeans-parallel.ipynb
+++ b/kmeans-parallel.ipynb
@@ -55,7 +55,7 @@
     "                #add the point to C\n",
     "                centroid=np.vstack([centroid,np.array(data_copy[n])])\n",
     "                #delete that point from the copy\n",
-    "                data_copy=np.delete(data_copy,index,axis=0)\n",
+    "                data_copy=np.delete(data_copy,n,axis=0)\n",
     "    \n",
     "    #step 4: assign the weights\n",
     "    weight_size=centroid.shape[0]\n",
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -206,8 +206,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3 µs, sys: 1e+03 ns, total: 4 µs\n",
-      "Wall time: 9.06 µs\n"
+      "CPU times: user 3 µs, sys: 1 µs, total: 4 µs\n",
+      "Wall time: 6.91 µs\n"
      ]
     }
    ],
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -226,17 +226,17 @@
     {
      "data": {
       "text/plain": [
-       "(array([[ 0.1667522 ,  0.51939996],\n",
-       "        [ 0.78119066,  0.85468391],\n",
-       "        [ 0.23783959,  0.85671761],\n",
-       "        [ 0.5009388 ,  0.20827411],\n",
-       "        [ 0.16411334,  0.16764617],\n",
-       "        [ 0.5036955 ,  0.6142908 ],\n",
-       "        [ 0.83596594,  0.50733647],\n",
-       "        [ 0.832612  ,  0.16065111]]), array([5, 7, 7, ..., 6, 3, 0]))"
+       "(array([[ 0.75714484,  0.86173061],\n",
+       "        [ 0.23315816,  0.85395848],\n",
+       "        [ 0.51070612,  0.58018509],\n",
+       "        [ 0.17024021,  0.17173989],\n",
+       "        [ 0.83920449,  0.53133457],\n",
+       "        [ 0.16219901,  0.52345237],\n",
+       "        [ 0.50720169,  0.19236784],\n",
+       "        [ 0.83693914,  0.18850448]]), array([4, 2, 6, ..., 6, 4, 6]))"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
