added des of kmeans++ challagnes

--- a/Parallelizing-K-means-Part-II.ipynb
+++ b/Parallelizing-K-means-Part-II.ipynb
@@ -90,32 +90,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With these kinds of applications, k-means is both a useful and wide-reaching algorithium. However, there are two key issue with the k-means algorithium."
+    "With these kinds of applications, k-means is both a useful and wide-reaching algorithium, However, there are two key issues with its implementation. In general, the k-means algorithium works by by taking some iniital centroid locations, often done by picking points at random from that data set. Each observation is then assignment the closest centroid and then the centroids are recomputed by calculating the mean of the observations assigned to it. This process is repeated until the algorithium converges, which is often measured by none of observations changing cluster assigments within an iteration. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So far, k-means still remains one of the most popular data processing algorithms. It is a widely used\n",
-    "technique for statistical data analysis in many fields, such as machine learning, pattern recognition,\n",
-    "image analysis and bioinformatics. However, general k-means algorithm with random initialization\n",
-    "is not a good clustering algorithm in terms of efficiency and quality, which means it needs a long\n",
-    "time to converge when the data set is large and it may just converge to the local optimum. In order\n",
-    "to improve the quality, we need to improve the initialization part of the k-means algorithm first,\n",
-    "selecting the right centers to do clustering. Recently people have proposed k-means++ initialization\n",
-    "algorithm, obtaining the initial centers which can be provably close to the optimal solution, largely\n",
-    "improves the quality of k-means algorithm but the problem of inefficiency is still unsolved. Now,\n",
-    "there is a new algorithm, k-means——, obtaining a nearly optimal solution after a logarithmic\n",
-    "number of passes.\n",
-    "Basically, k-means—— is based on k-means++ and the largest difference between these two\n",
-    "algorithm is the initialization part of the algorithm. Since the initialization of k-means++ is\n",
-    "deterministic (the previous choices that affect which points are choosed in the current solution),\n",
-    "it is nearly impossible to use parallelized computation to improve efficiency. Instead, k-means——\n",
-    "algorithm samples each point independently in each round and repeat the process for approximately\n",
-    "O(log φ) rounds, which can be easily implemented by means of parallel computation. Besides, φ\n",
-    "is the cluster cost of initial randomly picked center, which can be viewed as sum of the distances\n",
-    "between initial center and other points."
+    "The key issue with this process, is that the overall clustering assigment is heavily dependent on the inital centroids. Given that the k-means algorthium often gets stuck in local minima, it does not make sense to simply randomly pick the inital centriods. K-mean++ provides a solution to this problem by selecting centroids at the beginning of the process the approximate the optimal solution."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In terms of the quality and consistency of the clustering arrangments, K-means++ is a remarkable solution. However, because the process involves looping through multiple centorid configerations in order to find the optimal once, this solution is not scalable for large data sets. Instead, the K-means$||$ algotithium uses a sampling factor $\\ell$ to dramatically reduce the number of passes while still arriving at an equivalent solution. This dractially increases the efficiency of the algrorithium and allows us to implement an optimal version of k-means clusters even of large data sets. "
    ]
   },
   {
